# VoxelEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  stb_image.cpp
VoxelEngine/: Block.h  CMakeLists.txt  Camera.h  Chunk.h  Light.h  MeshLoader.h  Shader.h  VoxelEngine.cpp  VoxelEngine.h  Window.h  main.cpp
VoxelEngine/Shaders/: fshader.glsl  vshader.glsl
